--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,10 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.2.3"
+myst-nb = "^1.3.0"
+jupyter = "^1.1.1"
+sphinx-autodoc-typehints = "^3.5.1"
+
