--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -3,7 +3,7 @@ name: Publish Docs to GitHub Pages
 on:
   push:
     branches:
-      - main  # Change to your main branch name
+      - release  # Change to your main branch name
 
 permissions:
   contents: read
