--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install sphinx>=7.0.0 sphinx-rtd-theme>=2.0.0 sphinx-autodoc-typehints>=1.24.0 myst-nb>=1.0.0 ipykernel>=6.0.0
+          pip install sphinx>=7.0.0 sphinx-rtd-theme>=2.0.0 sphinx-autodoc-typehints>=1.24.0 myst-nb>=1.0.0 ipykernel>=6.0.0 sphinx_book_theme
 
       - name: Build Sphinx documentation
         run: |
