added dataset support, and plot to visualize clusters as a network

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "coregtor"
-version = "0.1.5"
+version = "0.1.6"
 description = "A tool to predict transcription co-regulators for a gene from gene expression data using random forest methods"
 authors = [{name = "Shubh Vardhan Jain", email = "shubhvjain@gmail.com"}]
 license = "MIT"
@@ -10,7 +10,8 @@ dependencies = [
     "scikit-learn (>=1.7.2,<2.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "matplotlib (>=3.10.7,<4.0.0)",
-    "numpy (>=2.3.4,<3.0.0)"
+    "numpy (>=2.3.4,<3.0.0)",
+    "networkx (>=3.5,<4.0)",
 ]
 
 
