--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib (>=3.10.7,<4.0.0)",
     "numpy (>=2.3.4,<3.0.0)",
     "networkx (>=3.5,<4.0)",
+    "decoupler (>=2.1.1,<3.0.0)",
 ]
 
 
