--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "coregtor"
-version = "0.1.7"
+version = "0.1.8"
 description = "A tool to predict transcription co-regulators for a gene from gene expression data using random forest methods"
 authors = [{name = "Shubh Vardhan Jain", email = "shubhvjain@gmail.com"}]
 license = "MIT"
@@ -13,6 +13,7 @@ dependencies = [
     "numpy (>=2.3.4,<3.0.0)",
     "networkx (>=3.5,<4.0)",
     "decoupler (>=2.1.1,<3.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
 ]
 
 
