--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "networkx (>=3.5,<4.0)",
     "decoupler (>=2.1.1,<3.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
+    "psutil (>=7.1.3,<8.0.0)",
+    "joblib (>=1.5.3,<2.0.0)",
 ]
 
 
@@ -28,3 +30,5 @@ jupyter = "^1.1.1"
 sphinx-autodoc-typehints = "^3.5.1"
 sphinx-book-theme = "^1.1.4"
 
+[tool.poetry.scripts]
+"coregtor" = "coregtor.cli:main"  # The CLI!
